--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,15 +1,3 @@
-/*
-font-family: 'Aleo', serif;
-font-family: 'Josefin Sans', sans-serif;
-*/
-/*
-Blue: #5474FD;
-Blue like: #00A2FF;
-Grey text: #999999;
-Grey bg: #333333;
-Red check: #FF6363;
-
-*/
 @import url('https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&family=Josefin+Sans:wght@400;700&display=swap');
 
 $main-txt-color: white;
@@ -135,5 +123,28 @@ body {
     &__quote {
         font-size: 36px;
         color: $accent-color;
+    }
+}
+.footer {
+    &__logo {
+        font-family: $main-font;
+        font-weight: 700;
+        letter-spacing: 3.36px;
+        font-size: 24px;
+    }
+    &__slogan {
+        font-family: $main-font;
+        font-size: 16px;
+        letter-spacing: 1.6px;
+        text-align: center;
+    }
+    &__icon {
+        color: $main-txt-color;
+        &--li {
+            color: $accent-color;
+        }
+    }
+    &__icon {
+        padding: 5px 12px;
     }
 }
