--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -1,19 +1,22 @@
 
-/*.why-us__grid {
+.why-us__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(6, 1fr);
 }
 .why-us__main {
-    grid-area: 3/1/6/7;
+    grid-row: 3/6;
+    grid-column: 1/7;
 }
 .img--cottage {
     max-width: 350px;
-    grid-area: 2/8/4/12;
+    grid-row: 2/2;
+    grid-column: 8/12;
     margin: 5px;
 }
 .img--mountain {
     max-width: 350px;
-    grid-area: 4/9/6/13;
+    grid-row: 4/6;
+    grid-column: 9/13;
     margin: 5px;
 }
