--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,11 +1,3 @@
-/*
-Blue: #5474FD;
-Blue like: #00A2FF;
-Grey text: #999999;
-Grey bg: #333333;
-Red check: #FF6363;
-*/
-
 body {
     display: flex;
     flex-flow: column wrap;
@@ -71,11 +63,7 @@ a:hover {
     align-items: center;
     width: 100%;
     min-height: 75vh;
-    &__container {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-    }
+    max-height: 685px;
     &__main {
         display: flex;
         flex-flow: column wrap;
@@ -90,7 +78,6 @@ a:hover {
         margin-top: 15px;
     }
     &__img {
-        display: inline-block;
         &img--cottage, &img--mountain {
             max-width: 350px;
             margin: 5px;
@@ -105,6 +92,9 @@ a:hover {
     background-size: cover;
     width: 100%;
     min-height: 75vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .spain-2 {
@@ -114,6 +104,16 @@ a:hover {
     background-size: cover;
     width: 100%;
     min-height: 75vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.spain__card {
+    margin-top: 10vh;
+}
+.spain-2__container {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .review {
@@ -132,6 +132,8 @@ a:hover {
     }
     &__wrapper {
         display: flex;
+        flex-wrap: wrap;
         margin-top: 46px;
     }
 }
+
