--- a/styles/_mid.scss
+++ b/styles/_mid.scss
@@ -1,7 +1,7 @@
 .mid {
     width: 100%;
     max-width: 1770px;
-    min-height: 25vh;
+    min-height: 340px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
