--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -7,6 +7,7 @@ $nav-bg-color: #5474FD;
     top: 0;
     display: flex;
     justify-content: center;
+    z-index: 1;
     &__navbar {
         display: flex;
         justify-content: space-between;
