--- a/styles/_mid.scss
+++ b/styles/_mid.scss
@@ -8,5 +8,9 @@
     &__item {
         display: block;
         text-align: center;
+        margin: 10px;
+    }
+    &__text {
+        margin: 9px;
     }
 }
