--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -63,11 +63,15 @@ a:hover {
     align-items: center;
     width: 100%;
     min-height: 75vh;
-    max-height: 685px;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        max-width: 1770px;
+    }
     &__main {
         display: flex;
         flex-flow: column wrap;
-        max-width: 560px;
+        max-width: 50%;
     }
     &__title {
         padding: 10px;
@@ -78,12 +82,25 @@ a:hover {
         margin-top: 15px;
     }
     &__img {
-        &img--cottage, &img--mountain {
+        max-width: 40%;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(5, 1fr);
+    }
+    &__img--cottage {
             max-width: 350px;
             margin: 5px;
+            grid-row: 1/2;
+            grid-column: 1/5;
         }
+    &__img--mountain {
+        max-width: 350px;
+        margin: 5px;
+        grid-row: 2/3;
+        grid-column: 2/6;
     }
 }
+
 
 .spain-1 {
     background-image: url(../images/villa.png);
