--- a/styles/index.css
+++ b/styles/index.css
@@ -437,6 +437,7 @@ a:hover {
 }
 
 .nav {
+  overflow: hidden;
   background-color: #5474FD;
   width: 100%;
   position: sticky;
@@ -469,6 +470,17 @@ a:hover {
   margin-left: 12px;
   margin-right: 12px;
   padding-right: 30px;
+}
+.nav__link__item {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 20px 20px;
+  text-decoration: none;
+}
+
+.nav .nav__icon {
+  display: none;
 }
 
 /*
@@ -527,8 +539,13 @@ Red check: #FF6363;
     letter-spacing: normal;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .nav__navbar {
+    display: block;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .header__search {
     display: block;
   }
   .header__searchbar::-webkit-input-placeholder {
@@ -545,6 +562,34 @@ Red check: #FF6363;
   }
   .header__searchbar::placeholder {
     font-size: 12px;
+  }
+  .review__wrapper {
+    overflow: hidden;
+    max-width: 90vw;
+  }
+}
+@media screen and (max-width: 600px) {
+  .nav__list {
+    display: none;
+  }
+  .nav__navbar a.nav__icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .nav__list.responsive {
+    position: relative;
+  }
+  .nav__list.responsive .nav__icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav__list.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
 .mid {
